Fixed URLs for images.

--- a/BinkenJamen/Views/Bink/CloseUp.cshtml
+++ b/BinkenJamen/Views/Bink/CloseUp.cshtml
@@ -7,5 +7,5 @@
 
 <h2>@Model.Nickname</h2>
 
-<img alt="@Model.Nickname" src="/@Model.ImageUrl" style="max-width: 70%; max-height: 65%;">
+<img alt="@Model.Nickname" src="@Model.ImageUrl" style="max-width: 70%; max-height: 65%;">
 <div>@Model.LongDescription</div>
